...
        </Text>
        <Text
          style={[styles.fail, styles.count]}
          numberOfLines={1}
          testID={
            isFooter
              ? 'total-fail-count'
              : `test-suite-${suiteIndex}-fail-count`
          }
        >
          {isFooter ? fail : fail || ''}
        </Text>
        <Text
...
